# lilka-rs

./: .gitignore  Cargo.toml  GEMINI.md  Readme.md
src/: board.rs  buzzer.rs  core.rs  display.rs  input.rs  lib.rs  menu.rs  state.rs
src/core/: format.rs
src/music/: mod.rs  notes.rs  song.rs
src/music/songs/: mod.rs  pink_panther.rs  startup.rs
src/services/: clock.rs  mod.rs  network.rs  ntp.rs
src/ui/: mod.rs  widgets.rs
src/ui/screens/: info.rs  main_menu.rs  mod.rs  wifi.rs
