[package]
edition = "2021"
name    = "lilka-rs"
version = "0.1.0"

[[bin]]
name = "lilka-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy"] }
esp-radio = { version = "0.17.0", features = [
  # "ble",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "wifi",
] }

embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-graphics = "0.8.1"
embedded-text = "0.7.3"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
embedded-layout = "0.4.2"
embedded-menu = "0.6.1"

log = { version = "0.4.29" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
chrono = { version = "0.4.43", default-features = false }
heapless = { version = "0.9.2", default-features = false }
static_cell = { version = "2.1.1", features = ["nightly"] }
mipidsi = "0.9.0"
jiff = { version = "0.2.18", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
